# Voxel-Game-Engine

./: .gitignore  CMakeLists.txt  LICENCE
Assets/models/: smooth_vase.fbx
EngineCore/: CMakeLists.txt
EngineCore/Include/: application.hpp  camera.hpp  defaultGen.hpp  mesh.hpp  renderer.hpp  texture.hpp  voxelMesh.hpp  vulkanInit.hpp
EngineCore/Include/ECS/: componentArray.hpp  componentManager.hpp  components.hpp  coordinator.hpp  entityManager.hpp  renderSystem.hpp  system.hpp  types.hpp
EngineCore/Include/Rendering/: allocator.hpp  camera.hpp  mesh.hpp  renderer.hpp  texture.hpp
EngineCore/Include/Rendering/Vulkan/: uniformData.hpp  vertexData.hpp  vulkanCommandBuffer.hpp  vulkanDescriptors.hpp  vulkanDrawing.hpp  vulkanFramebuffers.hpp  vulkanPipeline.hpp  vulkanRenderPass.hpp  vulkanSurface.hpp  vulkanSwapchain.hpp  vulkanSyncObjects.hpp
EngineCore/Include/Utils/: fileUtils.hpp  modelLoading.hpp  profiler.hpp
EngineCore/Include/Voxels/: components.hpp  meshingSystem.hpp  voxel.hpp  voxelSystem.hpp
EngineCore/Include/Vulkan/: context.hpp  uniformData.hpp  vertexData.hpp  vulkanBufferObjects.hpp  vulkanBufferUtils.hpp  vulkanCommandBuffer.hpp  vulkanCommandPool.hpp  vulkanDescriptors.hpp  vulkanDevice.hpp  vulkanDrawing.hpp  vulkanFramebuffers.hpp  vulkanImages.hpp  vulkanInit.hpp  vulkanLogicalDevice.hpp  vulkanPhysicalDevice.hpp  vulkanPipeline.hpp  vulkanRenderPass.hpp  vulkanShaderModules.hpp  vulkanSurface.hpp  vulkanSwapchain.hpp  vulkanSyncObjects.hpp
EngineCore/src/: application.cpp  main.cpp  mesh.cpp  renderSystem.cpp  renderer.cpp  voxelMesh.cpp  vulkanInit.cpp
EngineCore/src/Rendering/: allocator.cpp  mesh.cpp  renderer.cpp  voxelMesh.cpp
EngineCore/src/Rendering/Vulkan/: vulkanBufferObjects.cpp  vulkanBufferUtils.cpp  vulkanCommandBuffer.cpp  vulkanDescriptors.cpp  vulkanDevice.cpp  vulkanImages.cpp  vulkanInit.cpp  vulkanPipeline.cpp  vulkanRenderPass.cpp  vulkanSwapchain.cpp  vulkanSyncObjects.cpp
EngineCore/src/Utils/: fileUtils.cpp  modelLoading.cpp
EngineCore/src/Voxels/: meshingSystem.cpp  voxelSystem.cpp
EngineCore/src/Vulkan/: vulkanBufferObjects.cpp  vulkanBufferUtils.cpp  vulkanCommandBuffer.cpp  vulkanDescriptors.cpp  vulkanDevice.cpp  vulkanDrawing.cpp  vulkanFramebuffers.cpp  vulkanImages.cpp  vulkanInit.cpp  vulkanPipeline.cpp  vulkanRenderPass.cpp  vulkanSurface.cpp  vulkanSwapchain.cpp  vulkanSyncObjects.cpp
shaders/: compile.bat  compile.sh  fragmentShader.frag  vertexShader.vert  voxel.frag  voxel.vert
